--- a/admin_client/templates/login.html
+++ b/admin_client/templates/login.html
@@ -6,6 +6,7 @@
     <title>Вход</title>
 </head>
 <body>
+    {% if not user.is_authenticated %}
     <h2>Вход</h2>
     <form method="post">
         {% csrf_token %}
@@ -16,5 +17,9 @@
         <button type="submit">Войти</button>
     </form>
     <p>Еще нет аккаунта? <a href="{% url 'registration' %}">Зарегистрируйтесь</a></p>
+    {% else %}
+    <h2>Вы уже вошли в систему</h2>
+    <p><a href="{% url 'home' %}">На главную страницу</a></p>
+    {% endif %}
 </body>
 </html>
